samples/_failures_safe/1761550291_2ca6cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d29546b.c:173: error: expected ‘;’, ‘,’ or ‘)’ at end of input
